--- a/src/components/form.css
+++ b/src/components/form.css
@@ -7,7 +7,7 @@
 .form-box{
     min-width: 100%;
     height: 100vh;
-    margin: 4.5vw;
+    margin: 5.5vw;
     /* padding: 5vw ; */
     /* position:relative;  */
 }
@@ -43,3 +43,14 @@
     font-size: 17px;
 }
 
+.button-save {
+    background-color: #0482b4; 
+    border: none;
+    border-radius: 15px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
